--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
 		"allowJs": true,
 		"checkJs": true,
 		"isolatedModules": true,
-		"moduleDetection": "force"
+		"moduleDetection": "force",
+		"baseUrl": ".",
+		"paths": {
+			"@components/*": ["src/components/*"],
+			"@sections/*": ["src/sections/*"],
+			"@assets/*": ["src/assets/*"]
+		}
 	},
 	"include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
